--- a/index.html
+++ b/index.html
@@ -1,1 +1,1047 @@
-hello
+
+<head>
+	<meta http-equiv="content-type" content="application/xhtml+xml; charset=UTF-8">
+	<title>Audio viz</title>
+</head>
+<body>
+	<table style="width:100%">
+		<thead>
+			<tr>
+				<th>
+					utt_id
+				</th>
+				<th>
+					VCTK anonymization speaker
+				</th>
+				<th>
+					beta_.07
+				</th>
+				<th>
+					beta_.06
+				</th>
+				<th>
+					beta_.065
+				</th>
+				<th>
+					mcadams
+				</th>
+				<th>
+					hi
+				</th>
+				<th>
+					utt2anonimised_speaker
+				</th>
+				<th>
+					gt
+				</th>
+				<th>
+					beta_.05
+				</th>
+
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>
+					<p>
+						260-123286-0013
+					</p>
+				</td>
+				<td>
+					<p>
+						p295
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						2830-3979-0012
+					</p>
+				</td>
+				<td>
+					<p>
+						p281
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						4077-13751-0002
+					</p>
+				</td>
+				<td>
+					<p>
+						p287
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						4970-29093-0019
+					</p>
+				</td>
+				<td>
+					<p>
+						p282
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						5105-28233-0007
+					</p>
+				</td>
+				<td>
+					<p>
+						p312
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						61-70968-0051
+					</p>
+				</td>
+				<td>
+					<p>
+						p236
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						7021-79730-0008
+					</p>
+				</td>
+				<td>
+					<p>
+						p247
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						7176-88083-0025
+					</p>
+				</td>
+				<td>
+					<p>
+						p301
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						8463-287645-0010
+					</p>
+				</td>
+				<td>
+					<p>
+						p247
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						8463-287645-0013
+					</p>
+				</td>
+				<td>
+					<p>
+						p329
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						908-31957-0003
+					</p>
+				</td>
+				<td>
+					<p>
+						p284
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						908-31957-0012
+					</p>
+				</td>
+				<td>
+					<p>
+						p236
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						908-31957-0020
+					</p>
+				</td>
+				<td>
+					<p>
+						p314
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						1221-135767-0000
+					</p>
+				</td>
+				<td>
+					<p>
+						p314
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						1284-1181-0013
+					</p>
+				</td>
+				<td>
+					<p>
+						p281
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						1284-1181-0019
+					</p>
+				</td>
+				<td>
+					<p>
+						p282
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						2094-142345-0003
+					</p>
+				</td>
+				<td>
+					<p>
+						p265
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						2094-142345-0043
+					</p>
+				</td>
+				<td>
+					<p>
+						p301
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						2094-142345-0051
+					</p>
+				</td>
+				<td>
+					<p>
+						p279
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						237-134500-0003
+					</p>
+				</td>
+				<td>
+					<p>
+						p265
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						3575-170457-0011
+					</p>
+				</td>
+				<td>
+					<p>
+						p343
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						3575-170457-0027
+					</p>
+				</td>
+				<td>
+					<p>
+						p265
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						4446-2273-0028
+					</p>
+				</td>
+				<td>
+					<p>
+						p329
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						4507-16021-0037
+					</p>
+				</td>
+				<td>
+					<p>
+						p279
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						4507-16021-0048
+					</p>
+				</td>
+				<td>
+					<p>
+						p314
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						4507-16021-0054
+					</p>
+				</td>
+				<td>
+					<p>
+						p361
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						4507-16021-0059
+					</p>
+				</td>
+				<td>
+					<p>
+						p329
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						6829-68771-0012
+					</p>
+				</td>
+				<td>
+					<p>
+						p329
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						8463-294828-0031
+					</p>
+				</td>
+				<td>
+					<p>
+						p362
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						8555-292519-0008
+					</p>
+				</td>
+				<td>
+					<p>
+						p279
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						1188-133604-0025
+					</p>
+				</td>
+				<td>
+					<p>
+						p312
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						2300-131720-0003
+					</p>
+				</td>
+				<td>
+					<p>
+						p279
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						2300-131720-0008
+					</p>
+				</td>
+				<td>
+					<p>
+						p281
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						260-123288-0007
+					</p>
+				</td>
+				<td>
+					<p>
+						p297
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						260-123440-0002
+					</p>
+				</td>
+				<td>
+					<p>
+						p343
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						260-123440-0010
+					</p>
+				</td>
+				<td>
+					<p>
+						p253
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						2830-3980-0030
+					</p>
+				</td>
+				<td>
+					<p>
+						p343
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						2830-3980-0063
+					</p>
+				</td>
+				<td>
+					<p>
+						p301
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						4077-13754-0000
+					</p>
+				</td>
+				<td>
+					<p>
+						p279
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						5105-28240-0008
+					</p>
+				</td>
+				<td>
+					<p>
+						p335
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						5639-40744-0025
+					</p>
+				</td>
+				<td>
+					<p>
+						p265
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						61-70970-0002
+					</p>
+				</td>
+				<td>
+					<p>
+						p247
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						672-122797-0074
+					</p>
+				</td>
+				<td>
+					<p>
+						p297
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						7127-75947-0028
+					</p>
+				</td>
+				<td>
+					<p>
+						p287
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						7176-92135-0045
+					</p>
+				</td>
+				<td>
+					<p>
+						p297
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						8224-274384-0001
+					</p>
+				</td>
+				<td>
+					<p>
+						p343
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						8230-279154-0005
+					</p>
+				</td>
+				<td>
+					<p>
+						p329
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						8455-210777-0028
+					</p>
+				</td>
+				<td>
+					<p>
+						p343
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						8455-210777-0065
+					</p>
+				</td>
+				<td>
+					<p>
+						p279
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+			<tr>
+				<td>
+					<p>
+						908-157963-0019
+					</p>
+				</td>
+				<td>
+					<p>
+						p329
+					</p>
+				</td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>
+
+		</tbody>
+	</table>
+</body>
